tests/NormalTests/paczka2/big_fuzzy/84897049.err
Error in line 2: f78Pec3 A416 70,8
Error in line 29: f78Pec3 A185 44,7
Error in line 38: VvYpp29E8LG A275 4,0
Error in line 43: u5fKz S609 30,5
Error in line 41: 7EdhCWh A185 27,1
Error in line 53: 7EdhCWh A275 89,4
Error in line 58: f78Pec3 A185 15,4
Error in line 59: f78Pec3 A275 74,4
Error in line 81: f78Pec3 A416 28,84
Error in line 77: f78Pec3 A275 32,0
Error in line 89: f78Pec3 A416 68,8
Error in line 87: K4m A275 31,5
Error in line 90: f78Pec3 A185 19,8
Error in line 88: 7EdhCWh S609 315,4
Error in line 92: u5fKz A185 49,4
Error in line 104: hFoeX9pqQDd S609 55,0
Error in line 108: u5fKz A275 34,5
Error in line 109: u5fKz A185 58,9
Error in line 97: 7EdhCWh A416 50,0
Error in line 116: f78Pec3 A275 64,3
Error in line 125: f78Pec3 A275 11,3
Error in line 121: 7EdhCWh S609 85,1
Error in line 141: hFoeX9pqQDd A185 10,6
Error in line 149: f78Pec3 A185 80,49
Error in line 132: f78Pec3 A185 37,7
Error in line 153: f78Pec3 S609 80,5
Error in line 147: hFoeX9pqQDd A185 92,9
Error in line 152: u5fKz A275 67,3
Error in line 140: 7EdhCWh A275 219,6
Error in line 157: u5fKz S609 97,2
Error in line 159: 7EdhCWh S609 40,5
Error in line 175: 7EdhCWh A275 98,4
Error in line 166: S609 A275 81,3
Error in line 198: K4m A416 21,5
Error in line 199: K4m A185 90,8
Error in line 213: VvYpp29E*LG A416 134,1
Error in line 207: S609 A416 249,6
Error in line 212: f78Pec3 S609 30,0
Error in line 223: f78Pec3 A185 93,2
Error in line 224: f78Pec3 S609 0,8
Error in line 225: f78Pec3 A275 9,4
Error in line 236: 7EdhCWh A185 92,1
Error in line 237: 7EdhCWh S609 70,1
Error in line 242: u5fKz A416 33,6
Error in line 227: K4m A275 185,3
Error in line 246: u5fKz S609 91,9
Error in line 248: u5fKz A275 0,0
Error in line 247: K4m S609 55,7
